# APP-SEARCH-Namazu

./: Makefile.OS2  README.md  README.os2
namazu/: README.en  VERSION
namazu/contrib/MHonArc-Japanize-patch-1.6/: MHonArc-Japanize-patch-1.6
namazu/contrib/NamazuJAVA.030.tar/: Namazu.java  NamazuConf.java  NamazuHistory.java  NamazuInfo.java  NamazuResources.java  NamazuResources_ja.java
namazu/contrib/pnamazu-98.12.16/: pnamazu.cgi
namazu/contrib/pnamazu-98.12.16/doc/: pnamazu.html
namazu/contrib/pnamazu-98.12.16/src/: bw.pl  bwnmz.pl  cmdline.pl  db.pl  diag.cgi  euc.pl  field.pl  hashop.pl  input.pl  inttype.pl  lang.pl  ldnmzcnf.pl  listop.pl  makepnmz.pl  mb.pl  namazu.pl  operate.pl  output.pl  pconfig.pl  phrase.pl  plain.pl  reg.pl  regconv.pl  remote.pl  sb.pl  tmnmz.pl  wakati.pl  wktndx.pl  wlist.pl  wsearch.pl
namazu/contrib/pnamazu-98.12.16/tool/: kwnmz.pl  nmztxt.pl
namazu/contrib/tknamazu-1.11.tar/: .exampletknmzrc  .unixtknmzrc  .wintknmzrc  tknamazu.bat.sample
namazu/doc/en/: intro.html  manual.html
namazu/doc/ja/: FAQ.html  history.html  intro.html  lynxcgi.html  manual.html
namazu/lib/: NMZ.foot.en  NMZ.foot.ja  NMZ.head.en  NMZ.head.ja
namazu/src/: Makefile.OS2  Makefile.W32  Makefile.in  cgi.c  clnmz.pl  codeconv.c  conf.c  configure  configure.in  form.c  gcnmz.pl  gtnmz.pl  hlist.c  mailutime.pl  messages.c  mknmz.pl  namazu.c  namazu.h  output.c  re_match.c  regex.c  rvnmz.pl  search.c  util.c  util.h  values.c  vfnmz.pl  wakati.c  wdnmz.pl
usr/local/namazu/contrib/: pnamazu-98.12.16.tgz
usr/local/namazu/doc/: ChangeLog
usr/local/namazu/doc/ja/: security.html
